test/test_suite/errors/using_missing_fault.c3
module std::core::runtime;

faultdef INVALID_CHOICE @if(false);

fn bool? get_yes_no(String[] args_at)
{
	return INVALID_CHOICE~; // #error: Matching identifier is not available due to
}
fn void main()
{}
